--- a/frontend/pawFinder/src/css/style.css
+++ b/frontend/pawFinder/src/css/style.css
@@ -1,5 +1,40 @@
-/* Ejemplo si el contenido está en un div con id="postContent" o una clase específica */
 #postContent, .blog-article-body {
-    white-space: pre-wrap; /* Conserva espacios y saltos de línea, y ajusta línea */
-    word-wrap: break-word; /* Asegura que palabras largas no rompan el layout */
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
+
+#containerEmotive { 
+    position: relative;
+}
+
+#emotive {
+    position: absolute; 
+    width: 100%;
+    height: 100%; 
+    
+    display: flex; 
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    
+    padding: 20px;
+    box-sizing: border-box;
+    
+    color: white;
+    text-align: center; 
+    
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 70%, rgba(0, 0, 0, 0.6) 80%, rgba(0, 0, 0, 0.85) 100%);
+    
+    z-index: 1; 
+}
+
+#emotive p {
+    margin-bottom: 0; 
+
+    font-weight: 700;
+
+    max-width: 90%; 
+    position: relative; 
+    z-index: 2; 
 }
